src/snapshots/zeek_language_server__lsp__test__hover_record_initializer-4.snap
---
source: src/lsp.rs
expression: "server.hover(HoverParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri.clone()),\n    Position::new(10, 19),), work_done_progress_params:\n    WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    String(
                        "### field `X::xa`",
                    ),
                    String(
                        "Type: `count`",
                    ),
                    String(
                        "```zeek\n# In X\nxa: count;\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 10,
                        character: 19,
                    },
                    end: Position {
                        line: 10,
                        character: 21,
                    },
                },
            ),
        },
    ),
)
