src/snapshots/zeek_language_server__lsp__test__hover_variable.snap
---
source: src/lsp.rs
assertion_line: 1118
expression: server.hover(params).await

---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    LanguageString(
                        LanguageString {
                            language: "zeek",
                            value: "local x = f();",
                        },
                    ),
                    LanguageString(
                        LanguageString {
                            language: "lisp",
                            value: "(var_decl (id) (initializer (init_class) (init (expr (expr (id))))))",
                        },
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 3,
                        character: 0,
                    },
                    end: Position {
                        line: 3,
                        character: 14,
                    },
                },
            ),
        },
    ),
)
