src/snapshots/zeek_language_server__lsp__test__inlay_hint_decls.snap
---
source: src/lsp.rs
expression: "server.inlay_hint(InlayHintParams\n{\n    text_document: TextDocumentIdentifier::new((*uri).clone()), range:\n    Range::new(Position::new(5, 0), Position::new(7, 0)),\n    work_done_progress_params: WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        [
            InlayHint {
                position: Position {
                    line: 5,
                    character: 7,
                },
                label: String(
                    ": <integer>",
                ),
                kind: Some(
                    Type,
                ),
                text_edits: None,
                tooltip: None,
                padding_left: None,
                padding_right: None,
                data: None,
            },
            InlayHint {
                position: Position {
                    line: 6,
                    character: 8,
                },
                label: String(
                    ": <integer>",
                ),
                kind: Some(
                    Type,
                ),
                text_edits: None,
                tooltip: None,
                padding_left: None,
                padding_right: None,
                data: None,
            },
        ],
    ),
)
