src/snapshots/zeek_language_server__lsp__test__references-2.snap
---
source: src/lsp.rs
expression: "server.references(ReferenceParams {\n            text_document_position: TextDocumentPositionParams::new(TextDocumentIdentifier::new((*uri).clone()),\n                Position::new(7, 6)),\n            work_done_progress_params: WorkDoneProgressParams::default(),\n            partial_result_params: PartialResultParams::default(),\n            context: ReferenceContext { include_declaration: true },\n        }).await"
---
Ok(
    Some(
        [
            Location {
                uri: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/x.zeek",
                    query: None,
                    fragment: None,
                },
                range: Range {
                    start: Position {
                        line: 7,
                        character: 6,
                    },
                    end: Position {
                        line: 7,
                        character: 7,
                    },
                },
            },
        ],
    ),
)
