src/snapshots/zeek_language_server__lsp__test__rename.snap
---
source: src/lsp.rs
expression: "server.rename(RenameParams\n{\n    text_document_position:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new((*uri).clone()),\n    Position::new(7, 10),), new_name: \"ABC\".into(), work_done_progress_params:\n    WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        WorkspaceEdit {
            changes: Some(
                {
                    Uri(
                        Uri {
                            scheme: "file",
                            authority: Some(
                                Authority {
                                    userinfo: None,
                                    host: "",
                                    host_parsed: RegName(
                                        "",
                                    ),
                                    port: None,
                                },
                            ),
                            path: "/x.zeek",
                            query: None,
                            fragment: None,
                        },
                    ): [
                        TextEdit {
                            range: Range {
                                start: Position {
                                    line: 7,
                                    character: 10,
                                },
                                end: Position {
                                    line: 7,
                                    character: 11,
                                },
                            },
                            new_text: "ABC",
                        },
                        TextEdit {
                            range: Range {
                                start: Position {
                                    line: 6,
                                    character: 10,
                                },
                                end: Position {
                                    line: 6,
                                    character: 11,
                                },
                            },
                            new_text: "ABC",
                        },
                        TextEdit {
                            range: Range {
                                start: Position {
                                    line: 4,
                                    character: 6,
                                },
                                end: Position {
                                    line: 4,
                                    character: 7,
                                },
                            },
                            new_text: "ABC",
                        },
                    ],
                },
            ),
            document_changes: None,
            change_annotations: None,
        },
    ),
)
